overlays/prod/service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: quiz-service
spec:
  type: ClusterIP
