overlays/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quiz-service
  namespace: demoapps
spec:
  type: LoadBalancer
