overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: quiz-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: quiz.innospheres.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: quiz-service
            port:
              number: 8080
